[package]
name = "encrypted-file-access"
version = "0.1.0"
edition = "2021"
authors = ["ccyuen1"]
license = "Apache-2.0"
repository = "https://github.com/ccyuen1/encrypted-file-access"
homepage = "https://github.com/ccyuen1/encrypted-file-access"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aead = { version = "^0.5", features = ["std", "stream"] }
aes-gcm-siv = { version = "0.11.1", features = ["std", "stream"] }
anyhow = "1.0.86"
argon2 = { version = "0.5.3", features = ["std"] }
bincode = "1.3.3"
bytes = { version = "1", features = ["serde"] }
clap = { version = "4.5.11", features = ["derive"] }
csv = "1.3.0"
derive-where = "1.2.7"
either = "1.13.0"
generic-array = { version = "^0.14", features = ["serde", "zeroize"] }
open-wait = { git = "https://github.com/ccyuen1/open-wait.git" }
rand = "0.8.5"
rpassword = "7.3.1"
secrecy = "0.8.0"
semver = "1.0"
serde = { version = "1.0.204", features = ["derive"] }
tempfile = "3.10.1"
uuid = { version = "1.10.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
xz2 = { version = "0.1.7", features = ["static"] }
zeroize = "1.8.1"

[profile.release]
strip = "debuginfo"
lto = true
codegen-units = 1
